# vaydeer-studio-linux

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  UI_UX_AUDIT.md  architecture.md  bindings.md  development.md  device-support.md  installation.md  interaction-design.md  protocol.md  safety.md  troubleshooting.md  user-guide.md
docs/research/: bootloader-and-qmk.md  device-architecture.md  firmware-format.md  hid-protocol.md  linux-activation.md  live-device-detection-debug.md  overview.md  protocol-comparison.md  sources.md  timeline.md
examples/: jp1011-profile.json
packaging/: README.md
packaging/appimage/: AppRun  build-appimage.sh  io.github.callumbaillie.vaydeer-studio.metainfo.xml
packaging/deb/: build-deb.sh
packaging/desktop/: vaydeer-studio-profile.xml  vaydeer-studio.desktop
packaging/flatpak/: build-flatpak.sh  org.vaydeer.VaydeerStudio.yml
packaging/systemd/: vaydeer-studio.service
packaging/udev/: 99-vaydeer-studio.rules
research/: source-index.md
research/sanitized-reports/: activation-retest.md  firmware-qmk.md  index.md  protocol-observations.md  usb-readonly.md
scripts/: bootstrap.sh  capture_mock_screenshot.py  check-docs.sh  generate-checksums.sh  install.sh  package.sh  test-bootstrap.sh  test-install.sh  uninstall.sh
src/vaydeer_studio/: __init__.py  __main__.py
src/vaydeer_studio/cli/: __init__.py  main.py
src/vaydeer_studio/core/: __init__.py  (+9 more)
tests/: conftest.py
tests/fixtures/: jp1011_reports.json
tests/gui/: test_controller.py  test_qml_shell.py
tests/hardware/: test_opt_in.py
tests/integration/: test_safety_apply.py  test_service.py
tests/unit/: test_diagnostics.py  test_discovery_keepalive.py  test_packets.py  test_profiles_backup_diff.py  test_protocol.py  test_release_metadata.py  test_templates.py  test_transport.py  test_window_state.py
(+29 files in other folders)
